# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  desktop.ini  main.cpp  main_test.cpp
ExportParaview/: UCDUtilities.cpp  UCDUtilities.hpp
src/: CMakeLists.txt  GeodesicGenerator.cpp  GeodesicGenerator.hpp  GeometryUtils.cpp  GeometryUtils.hpp  PolygonalMesh.hpp  ShortestPath.cpp  ShortestPath.hpp
src_test/: TestPolygon.hpp
